# DataDoom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tmp_pdir.txt  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  status.md  testing_guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml  repro-matrix.yml
Docs/: DataDoom_Critical_Analysis_and_Recommended_Architecture.md  DataDoom_PRD_v2_OpenSource.md
architecture/: index.html
authoring/: index.html
design/: UI_Design_Prompts.md
docs_site/: architecture.md  authoring.md  examples.md  index.md  llm-reference.md  plugins.md  spec-reference.md
docs_site/stylesheets/: landing.css
docs_v2/: 00_README_Index.md  01_PRD.md  02_User_Flow_Guide.md  03_Technical_Architecture.md  04_DataDoom_Spec_Reference.md  05_Mathematical_Algorithm_Definitions.md  06_Internal_Data_Models.md  07_Database_Schema.md  08_API_Contract.md  09_Plugin_System.md  10_File_Structure.md  11_Language_Technology_Specification.md  12_Resource_Estimation_Model.md  13_Testing_and_Reproducibility_Strategy.md  14_Security_and_Privacy.md  15_Open_Source_Governance.md  16_Engineering_Roadmap.md  17_Implementation_Guide.md  18_AI_Accelerated_Engineering_Playbook.md  19_Learning_Guide.md  20_YAML_Authoring_Guide.md  21_LLM_Spec_Authoring_Reference.md  22_Release_and_Publishing_Runbook.md  23_Pushing_Changes_DCO_and_Versioning.md
examples/: causal-fraud.datadoom.yaml  difficulty-credit.datadoom.yaml  failure-fraud.datadoom.yaml  index.html  people-realistic.datadoom.yaml  tabular-basic.datadoom.yaml  timeseries-sensor.datadoom.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: CausalGraphEditor.tsx  CausalGraphView.tsx  CausalInspector.tsx  ColumnGuideView.tsx  ComparisonView.tsx  ConfirmHost.tsx  DifficultyConfigurator.tsx  DifficultyView.tsx  ErrorBoundary.tsx  ExportModal.tsx  FailureBadges.tsx  FailureConfigurator.tsx  FailureInspector.tsx  GenerationsPanel.tsx  Histogram.tsx  Inspector.tsx  Layout.tsx  Modal.tsx  OverviewView.tsx  SpecDrawer.tsx  StageStepper.tsx  TableCanvas.tsx  Toaster.tsx  ui.tsx
frontend/src/lib/: api.ts  audit.ts  causal.ts  clsx.ts  difficulty.ts  failures.ts  runSocket.ts  sampling.ts  schemaForm.tsx  specDefaults.ts  summary.ts  types.ts  useHistory.ts  viewLayout.ts
frontend/src/pages/: Canvas.tsx  Dashboard.tsx  Placeholder.tsx  Plugins.tsx  Results.tsx  Templates.tsx  Tracker.tsx
frontend/src/store/: chrome.ts  confirm.ts  toast.ts  ui.ts
llm-reference/: index.html
overrides/: home.html
plugins/: index.html
search/: search_index.json
spec-reference/: index.html
src/datadoom/: __init__.py  config.py  plugin.py  version.py
src/datadoom/adapters/: __init__.py  frameworks.py  loaders.py
src/datadoom/api/: __init__.py  app.py  deps.py  errors.py  estimate.py  schemas.py  serializers.py  state.py  store_helpers.py  ws.py
src/datadoom/api/routes/: __init__.py  artifacts.py  datasets.py  meta.py  plugins.py  runs.py  specs.py  templates.py
src/datadoom/cli/: __init__.py  main.py
src/datadoom/engine/: __init__.py  advice.py  audit.py  errors.py  pipeline.py  profile.py  progress.py  reference.py  reports.py  rng.py  timeseries.py
src/datadoom/engine/causal/: __init__.py  execute.py  functions.py  graph.py
src/datadoom/engine/difficulty/: __init__.py  calibrate.py  knobs.py  probes.py
src/datadoom/engine/export/: __init__.py  base.py  checksums.py  csv_exporter.py  json_exporter.py  metadata.py  parquet_exporter.py
src/datadoom/engine/failure/: __init__.py  apply.py  base.py  modes.py
src/datadoom/engine/spec/: __init__.py  hashing.py  models.py  validate.py
src/datadoom/jobs/: __init__.py  progress.py  worker.py
src/datadoom/plugins/: __init__.py  contracts.py  loader.py  registry.py  scaffold.py
src/datadoom/store/: __init__.py  artifacts.py  db.py  models.py  repositories.py
src/datadoom/store/migrations/: env.py
src/datadoom/store/migrations/versions/: 0001_init.py  0002_report_mutual_information.py  0003_run_name.py  0004_report_profile.py
src/datadoom/templates/: __init__.py  ab_test.datadoom.yaml  clinical_deterioration.datadoom.yaml  credit_default_challenge.datadoom.yaml  customer_churn.datadoom.yaml  ecommerce_orders.datadoom.yaml  fraud_detection.datadoom.yaml  hospital_readmission.datadoom.yaml  insurance_claims.datadoom.yaml  iot_sensors.datadoom.yaml  people_directory.datadoom.yaml  predictive_maintenance.datadoom.yaml  telecom_churn_challenge.datadoom.yaml
stylesheets/: landing.css
tests/api/: conftest.py  test_api.py
tests/determinism/: test_determinism.py
tests/golden/: checksums.json  fraud_numeric.datadoom.yaml
tests/perf/: test_perf_budget.py
tests/plugin_contract/: test_plugins.py
tests/unit/: test_adapters.py  test_audit.py  test_causal.py  test_dataset_audit.py  test_difficulty.py  test_difficulty_audit.py  test_dist.py  test_dist_correctness.py  test_export.py  test_export_formats.py  test_failure.py  test_failure_audit.py  test_hashing.py  test_latent.py  test_metadata.py  test_pipeline.py  test_profile.py  test_providers.py  test_reference.py  test_rng.py  test_spec_validate.py  test_store.py  test_templates.py  test_timeseries.py  test_version.py
