[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datadoom"
description = "Local-first, open-source engine for controllable, reproducible synthetic data."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Santhosh Reddy" }]
keywords = ["synthetic-data", "reproducible", "causal", "dataset", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pandas>=2.1,<3",
    "networkx>=3.1,<4",
    "pydantic>=2.5,<3",
    "PyYAML>=6,<7",
    "typer>=0.12,<1",
    # Realistic-but-seeded text providers (names, emails, addresses, …). Pinned
    # to a minor line because, like numpy for numeric draws, a different version
    # can change the strings produced for a given seed (invariant #6).
    "mimesis>=19,<20",
]

[project.optional-dependencies]
# The web server (store + jobs + api). The pure engine + CLI work without these;
# `datadoom serve` / the web Canvas require this extra (`pip install datadoom[server]`).
server = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "websockets>=12",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.8",
    "hypothesis>=6",
    "import-linter>=2",
    "types-PyYAML",
    "httpx>=0.27",
    # server deps are needed to run the api/store/jobs test suites
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "websockets>=12",
    "python-multipart>=0.0.9",
]

[project.scripts]
datadoom = "datadoom.cli.main:app"

[project.urls]
Homepage = "https://github.com/SanthoshReddy352/datadoom"
Repository = "https://github.com/SanthoshReddy352/datadoom"

[tool.hatch.version]
path = "src/datadoom/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/datadoom"]
# The compiled frontend (built from frontend/ into this dir) ships inside the wheel
# so `pip install datadoom[server] && datadoom serve` needs no Node toolchain.
artifacts = ["src/datadoom/webdist/**"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic API places Option/Argument calls in parameter defaults.
"src/datadoom/cli/*.py" = ["B008"]
# FastAPI's idiomatic API places Depends()/Query()/Header() in parameter defaults.
"src/datadoom/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
packages = ["datadoom"]
mypy_path = "src"
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["scipy.*", "pandas.*", "yaml", "networkx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The web/persistence layers are pragmatic glue; keep the strict bar on engine/.
module = ["datadoom.store.*", "datadoom.jobs.*", "datadoom.api.*"]
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.importlinter]
root_package = "datadoom"
include_external_packages = true

[[tool.importlinter.contracts]]
# The engine is a clean, installable library: it must never reach "up" into the
# web/DB/CLI layers or import a web framework (10 §4).
name = "engine stays framework-free"
type = "forbidden"
source_modules = ["datadoom.engine"]
forbidden_modules = [
    "datadoom.api",
    "datadoom.store",
    "datadoom.jobs",
    "datadoom.cli",
    "fastapi",
    "sqlalchemy",
    "uvicorn",
]

[[tool.importlinter.contracts]]
# Layer order (10 §4): cli -> api -> jobs -> engine. Each layer may import the
# ones below it but never above.
name = "layered architecture"
type = "layers"
layers = ["datadoom.cli", "datadoom.api", "datadoom.jobs", "datadoom.engine"]

[[tool.importlinter.contracts]]
# store/ sits beside the engine: it persists engine outputs but must not reach
# "up" into jobs/api/cli (those depend on store, not the reverse).
name = "store depends only on engine"
type = "forbidden"
source_modules = ["datadoom.store"]
forbidden_modules = [
    "datadoom.api",
    "datadoom.jobs",
    "datadoom.cli",
]
