[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datadoom"
description = "Local-first, open-source engine for controllable, reproducible synthetic data."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Santhosh Reddy" }]
keywords = ["synthetic-data", "reproducible", "causal", "dataset", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pandas>=2.1,<3",
    "networkx>=3.1,<4",
    "pydantic>=2.5,<3",
    "PyYAML>=6,<7",
    "typer>=0.12,<1",
    # Realistic-but-seeded text providers (names, emails, addresses, …). Pinned
    # to a minor line because, like numpy for numeric draws, a different version
    # can change the strings produced for a given seed (invariant #6).
    "mimesis>=19,<20",
    # Baseline probe models for difficulty calibration (logreg/tree). The probe
    # metric drives the adaptive loop's knob selection, so it is on the
    # determinism-critical path: pinned to a minor line like numpy/mimesis
    # because a different version could shift a near-boundary probe score and
    # change which calibrated knob value (hence which bytes) a run lands on
    # (invariant #6). Same-environment reproducibility is exact.
    "scikit-learn>=1.4,<2",
]

[project.optional-dependencies]
# Parquet export (a large wheel — kept out of the light core). With it installed,
# `export.formats: [parquet]` works; without it, a parquet run errors with an
# actionable install hint. JSON/CSV export need no extra.
parquet = ["pyarrow>=15,<19"]
# Framework adapters (datadoom.adapters): turn a generated run into a torch /
# tensorflow / HuggingFace dataset. These are heavyweight, so they are opt-in
# extras — the pandas loader (`load_dataframe`) needs no extra. Each loader
# lazy-imports its framework and errors with an install hint if it is absent.
torch = ["torch>=2,<3"]
tf = ["tensorflow>=2.13"]
hf = ["datasets>=2.14"]
# The web server (store + jobs + api). The pure engine + CLI work without these;
# `datadoom serve` / the web Canvas require this extra (`pip install datadoom[server]`).
server = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "websockets>=12",
    "python-multipart>=0.0.9",
]
# Documentation site (mkdocs-material). Pure docs tooling — not needed to run
# DataDoom. `pip install datadoom[docs]` then `mkdocs serve` / `mkdocs build`.
# The include-markdown plugin lets the site embed the authoritative `docs_v2/`
# sources directly, so the design docs stay the single source of truth.
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocs-include-markdown-plugin>=6,<8",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.8",
    "hypothesis>=6",
    "import-linter>=2",
    "types-PyYAML",
    "httpx>=0.27",
    # parquet export is exercised by the export tests
    "pyarrow>=15,<19",
    # server deps are needed to run the api/store/jobs test suites
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "websockets>=12",
    "python-multipart>=0.0.9",
]

[project.scripts]
datadoom = "datadoom.cli.main:app"

[project.urls]
Homepage = "https://github.com/SanthoshReddy352/datadoom"
Repository = "https://github.com/SanthoshReddy352/datadoom"

[tool.hatch.version]
path = "src/datadoom/version.py"

[tool.hatch.build]
# Force-include the compiled frontend and template data in EVERY build target.
# These live under a gitignored path (webdist) / are data files, so without this
# hatchling's VCS-based file selection would drop them — and because `python -m
# build` builds the wheel *from the sdist*, the sdist must carry them too or the
# wheel ends up without the web Canvas. Listing them here covers sdist + wheel.
artifacts = ["src/datadoom/webdist/**", "src/datadoom/templates/*.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/datadoom"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic API places Option/Argument calls in parameter defaults.
"src/datadoom/cli/*.py" = ["B008"]
# FastAPI's idiomatic API places Depends()/Query()/Header() in parameter defaults.
"src/datadoom/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
packages = ["datadoom"]
mypy_path = "src"
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["scipy.*", "pandas.*", "yaml", "networkx.*", "sklearn.*", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The web/persistence layers are pragmatic glue; keep the strict bar on engine/.
module = ["datadoom.store.*", "datadoom.jobs.*", "datadoom.api.*"]
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Perf-budget tests are wall-clock assertions, so they are deselected from the
# default run (and CI quality gate) to stay non-flaky; run them explicitly with
# `pytest -m perf`. The repro/CI jobs that want them opt in.
addopts = "-q -m 'not perf'"
markers = [
    "perf: performance budget smoke (deselected by default; run with -m perf)",
]

[tool.importlinter]
root_package = "datadoom"
include_external_packages = true

[[tool.importlinter.contracts]]
# The engine is a clean, installable library: it must never reach "up" into the
# web/DB/CLI layers or import a web framework (10 §4).
name = "engine stays framework-free"
type = "forbidden"
source_modules = ["datadoom.engine"]
forbidden_modules = [
    "datadoom.api",
    "datadoom.store",
    "datadoom.jobs",
    "datadoom.cli",
    "datadoom.plugins",
    "datadoom.adapters",
    "fastapi",
    "sqlalchemy",
    "uvicorn",
]

[[tool.importlinter.contracts]]
# Layer order (10 §4): cli -> api -> jobs -> engine. Each layer may import the
# ones below it but never above.
name = "layered architecture"
type = "layers"
layers = ["datadoom.cli", "datadoom.api", "datadoom.jobs", "datadoom.engine"]

[[tool.importlinter.contracts]]
# store/ sits beside the engine: it persists engine outputs but must not reach
# "up" into jobs/api/cli (those depend on store, not the reverse).
name = "store depends only on engine"
type = "forbidden"
source_modules = ["datadoom.store"]
forbidden_modules = [
    "datadoom.api",
    "datadoom.jobs",
    "datadoom.cli",
]

[[tool.importlinter.contracts]]
# plugins/ sits beside the engine and depends only on it (10 §4): it consumes the
# engine ABCs and mutates the engine's registries; it must never reach "up".
name = "plugins depend only on engine"
type = "forbidden"
source_modules = ["datadoom.plugins"]
forbidden_modules = [
    "datadoom.api",
    "datadoom.store",
    "datadoom.jobs",
    "datadoom.cli",
]

[[tool.importlinter.contracts]]
# adapters/ is a consumer convenience: it reads generated artifacts into pandas /
# torch / tf / HF. It depends only on the engine (for types) and must not reach
# "up" into the server/CLI layers.
name = "adapters depend only on engine"
type = "forbidden"
source_modules = ["datadoom.adapters"]
forbidden_modules = [
    "datadoom.api",
    "datadoom.store",
    "datadoom.jobs",
    "datadoom.cli",
    "datadoom.plugins",
]
